compiler/testData/cli/jvm/singleJavaFileRoots.out
compiler/testData/cli/jvm/singleJavaFileRoots/test.kt:6:9: error: cannot access class 'C'. Check your module classpath for missing or conflicting dependencies
    B().c()
        ^
compiler/testData/cli/jvm/singleJavaFileRoots/test.kt:7:5: error: unresolved reference: C
    C().a()
    ^
compiler/testData/cli/jvm/singleJavaFileRoots/test.kt:11:5: error: cannot access '<init>': it is public/*package*/ in 'PackageLocal1'
    PackageLocal1()
    ^
compiler/testData/cli/jvm/singleJavaFileRoots/test.kt:12:5: error: cannot access '<init>': it is public/*package*/ in 'PackageLocal2'
    PackageLocal2()
    ^
COMPILATION_ERROR
